fix scroll on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,6 @@ body {
   padding: 0;
   box-sizing: border-box;
   height: 100dvh;
+  width: 100dvw;
+  position: absolute;
 }
